@@ -4,6 +4,7 @@
 - Examples can contain URL parameters
 - Examples are rendered in HaveAPI client languages, showing a snippet of
   code generated from the example
+- Allow APIs to set HTTP status code
 
 * Tue Oct 18 2016 - version 0.6.0
 - Token authentication: fix output of action renew
